feat: add factory pattern to create lecture and provide api for chapter, lecture, course-info