@@ -1,6 +1,8 @@
 package com.hcmut.lms.coursemanagement.application.service.impl;
 
 import com.hcmut.lms.coursemanagement.application.dto.request.ChapterRequest;
+import com.hcmut.lms.coursemanagement.application.dto.request.ReorderListRequest;
+import com.hcmut.lms.coursemanagement.application.dto.request.ReorderRequest;
 import com.hcmut.lms.coursemanagement.application.dto.response.ChapterResponse;
 import com.hcmut.lms.coursemanagement.application.mapper.ChapterMapper;
 import com.hcmut.lms.coursemanagement.application.service.ChapterService;
@@ -8,12 +10,14 @@ import com.hcmut.lms.coursemanagement.domain.entity.chapter.Chapter;
 import com.hcmut.lms.coursemanagement.domain.entity.classSection.ClassSection;
 import com.hcmut.lms.coursemanagement.repository.ChapterRepository;
 import com.hcmut.lms.coursemanagement.repository.ClassSectionRepository;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -32,10 +36,21 @@ public class ChapterServiceImpl implements ChapterService {
         log.info("Creating chapter: {}", requestDTO.getTitle());
         
         ClassSection classSection = classSectionRepository.findById(requestDTO.getClassSectionId())
-                .orElseThrow(() -> new RuntimeException("Class section not found with id: " + requestDTO.getClassSectionId()));
+                .orElseThrow(() -> new EntityNotFoundException("Class section not found with id: " + requestDTO.getClassSectionId()));
         
         Chapter chapter = chapterMapper.toEntity(requestDTO);
         chapter.setClassSection(classSection);
+        
+        // Tự động gán order_index nếu không được cung cấp
+        if (chapter.getOrderIndex() == null) {
+            List<Chapter> existingChapters = chapterRepository.findByClassSectionIdOrderByOrderIndex(
+                    requestDTO.getClassSectionId());
+            int maxOrderIndex = existingChapters.stream()
+                    .mapToInt(Chapter::getOrderIndex)
+                    .max()
+                    .orElse(-1);
+            chapter.setOrderIndex(maxOrderIndex + 1);
+        }
         
         Chapter savedChapter = chapterRepository.save(chapter);
         
@@ -82,7 +97,7 @@ public class ChapterServiceImpl implements ChapterService {
         
         return chapterRepository.findByClassSectionIdOrderByOrderIndex(classSectionId).stream()
                 .map(chapterMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Override
@@ -90,11 +105,38 @@ public class ChapterServiceImpl implements ChapterService {
         log.info("Deleting chapter with id: {}", id);
         
         if (!chapterRepository.existsById(id)) {
-            throw new RuntimeException("Chapter not found with id: " + id);
+            throw new EntityNotFoundException("Chapter not found with id: " + id);
         }
         
         chapterRepository.deleteById(id);
         log.info("Chapter deleted successfully with id: {}", id);
+    }
+    
+    @Override
+    public List<ChapterResponse> reorderChapters(ReorderListRequest request) {
+        log.info("Reordering chapters");
+        
+        Map<UUID, Integer> orderMap = request.getItems().stream()
+                .collect(Collectors.toMap(ReorderRequest::getId, ReorderRequest::getNewOrderIndex));
+        
+        List<Chapter> chapters = chapterRepository.findAllById(orderMap.keySet());
+        
+        if (chapters.size() != orderMap.size()) {
+            throw new EntityNotFoundException("Some chapters not found");
+        }
+        
+        chapters.forEach(chapter -> {
+            Integer newOrderIndex = orderMap.get(chapter.getId());
+            chapter.setOrderIndex(newOrderIndex);
+        });
+        
+        List<Chapter> savedChapters = chapterRepository.saveAll(chapters);
+        
+        log.info("Chapters reordered successfully");
+        return savedChapters.stream()
+                .sorted((c1, c2) -> c1.getOrderIndex().compareTo(c2.getOrderIndex()))
+                .map(chapterMapper::toResponseDTO)
+                .toList();
     }
 }
 
